tests/outputs/Filter_030.out
Parse tree from tests/cases/Filter_030.inp:
Error: in tests/cases/Filter_030.inp: line 1:
    unexpected token "LENGTH", expected one of " ", <SPECIAL_0>,
    <SPECIAL_1>, <SPECIAL_2>, <SPECIAL_3>, <SPECIAL_4>, "NOT", """,
    "+", "-", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9", ".",
    "a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m",
    "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z",
    "_", or "("

LENGTH elements 42
^
